Edit to interestLevel description
Not strictly a typo correction, but a fix to make it clear in the docs that this field is an enum.

--- a/schema/components.json
+++ b/schema/components.json
@@ -250,7 +250,7 @@
         },
         "interestLevel": {
           "title": "Interest level",
-          "description": "Is this interest held directly or indirectly?",
+          "description": "A codelist value indicating whether this interest is held directly or indirectly. See the [interestLevel codelist](#interestlevel)",
           "type": "string",
           "enum": [
             "direct",
