Format uri added to source.url - fixes #147

--- a/schema/components.json
+++ b/schema/components.json
@@ -39,7 +39,8 @@
         "url": {
           "title": "Source URL",
           "description": "If this information was fetched from an external URL, or a machine or human readable web page is available that provides additional information on how this statement was sourced, provide the URL.",
-          "type": "string"
+          "type": "string",
+          "format": "uri"
         },
         "retrievedAt": {
           "title": "Retrieved at",
