--- a/.tx/config
+++ b/.tx/config
@@ -1,6 +1,12 @@
 [main]
 host = https://www.transifex.com
 
+[bods-v01.schema]
+file_filter = docs/locale/<lang>/LC_MESSAGES/schema.po
+source_file = docs/_build/gettext/schema.pot
+source_lang = en
+type = PO
+
 [bods-v01.privacy-notice]
 file_filter = docs/locale/<lang>/LC_MESSAGES/privacy-notice.po
 source_file = docs/_build/gettext/privacy-notice.pot
@@ -10,6 +16,12 @@ type = PO
 [bods-v01.usecases]
 file_filter = docs/locale/<lang>/LC_MESSAGES/usecases.po
 source_file = docs/_build/gettext/usecases.pot
+source_lang = en
+type = PO
+
+[bods-v01.codelist]
+file_filter = docs/locale/<lang>/LC_MESSAGES/codelist.po
+source_file = docs/_build/gettext/codelist.pot
 source_lang = en
 type = PO
 
