Examples updated to include publicationDetails

--- a/schema/components.json
+++ b/schema/components.json
@@ -552,7 +552,7 @@
           "format": "uri"
         }
       },
-      "oneOf": [
+      "anyof": [
         {
           "required": [
             "name"
