Typo fixed, anyof -> anyOf in components.json

--- a/schema/components.json
+++ b/schema/components.json
@@ -552,7 +552,7 @@
           "format": "uri"
         }
       },
-      "anyof": [
+      "anyOf": [
         {
           "required": [
             "name"
