--- a/.tx/config
+++ b/.tx/config
@@ -25,12 +25,6 @@ source_file = docs/_build/gettext/usecases.pot
 source_lang = en
 type = PO
 
-[bods-v02.privacy-notice]
-file_filter = docs/locale/<lang>/LC_MESSAGES/privacy-notice.po
-source_file = docs/_build/gettext/privacy-notice.pot
-source_lang = en
-type = PO
-
 [bods-v02.userguides--bulk-data-and-api]
 file_filter = docs/locale/<lang>/LC_MESSAGES/userguides/bulk-data-and-api.po
 source_file = docs/_build/gettext/userguides/bulk-data-and-api.pot
@@ -94,6 +88,12 @@ type = PO
 [bods-v02.about--credits]
 file_filter = docs/locale/<lang>/LC_MESSAGES/about/credits.po
 source_file = docs/_build/gettext/about/credits.pot
+source_lang = en
+type = PO
+
+[bods-v02.about--privacy-notice]
+file_filter = docs/locale/<lang>/LC_MESSAGES/about/privacy-notice.po
+source_file = docs/_build/gettext/about/privacy-notice.pot
 source_lang = en
 type = PO
 
@@ -234,3 +234,4 @@ file_filter = docs/locale/<lang>/LC_MESSAGES/schema/guidance/languages.po
 source_file = docs/_build/gettext/schema/guidance/languages.pot
 source_lang = en
 type = PO
+
