unknown beneficial owner and clean up examples

--- a/examples/ua/os-04-dc-02-ua-ms1-indirect-natural-person-via-unknown-entity.json
+++ b/examples/ua/os-04-dc-02-ua-ms1-indirect-natural-person-via-unknown-entity.json
@@ -37,6 +37,9 @@
     "isComponent": true,
     "statementDate": "2018-12-17",
     "entityType": "unknownEntity",
+    "unspecifiedEntityDetails": {
+      "reason": "unknown"
+    },
     "source": {
       "type": ["officialRegister"],
       "assertedBy": [
