--- a/examples/ua/os-04-dc-03-ua-bp-unknown-beneficial-owner.json
+++ b/examples/ua/os-04-dc-03-ua-bp-unknown-beneficial-owner.json
@@ -5,22 +5,21 @@
     "statementDate": "2018-12-19",
     "isComponent": false,
     "entityType": "registeredEntity",
-    "name": "ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ ЯКОВЕНКО",
+    "name": "Компанія А",
     "alternateNames": [
-      "ЯКОВЕНКО"
+      "А"
     ],
-    "foundingDate": "2015-10-30",
     "identifiers": [
       {
         "scheme": "UA-EDR",
-        "id": "XE9876"
+        "id": "XE-OS-04-DC-03"
       }
     ],
     "source": {
       "type": ["officialRegister"],
       "assertedBy": [
         {
-          "name": "ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ ЯКОВЕНКО"
+          "name": "Компанія А"
         }
       ]
     },
@@ -49,7 +48,7 @@
       "type": ["officialRegister"],
       "assertedBy": [
         {
-          "name": "ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ ЯКОВЕНКО"
+          "name": "Компанія А"
         }
       ]
     },
