--- a/.tx/config
+++ b/.tx/config
@@ -13,6 +13,13 @@ source_file = docs/_build/gettext/codelist.pot
 source_lang = en
 type = PO
 
+[bods-v02.svg]
+file_filter = docs/locale/<lang>/LC_MESSAGES/svg.po
+source_file = docs/_build/gettext/svg.pot
+source_lang = en
+type = PO
+
+
 [bods-v02.index]
 file_filter = docs/locale/<lang>/LC_MESSAGES/index.po
 source_file = docs/_build/gettext/index.pot
