--- a/schema/components.json
+++ b/schema/components.json
@@ -16,7 +16,7 @@
       "properties": {
         "type": {
           "title": "Source type",
-          "description": "What type of source is this? Multiple tags can be combined. Values should come from the [source type](#sourcetype) codelist.",
+          "description": "What type of source is this? Multiple tags can be combined. Values should come from the source type codelist.",
           "type": "array",
           "items": {
             "type": "string",
@@ -187,7 +187,7 @@
       "properties": {
         "type": {
           "title": "Type",
-          "description": "What kind of name is this? See the [nameType](#nametype) codelist.",
+          "description": "What kind of name is this? See the nameType codelist.",
           "type": "string",
           "enum": [
             "individual",
@@ -229,7 +229,7 @@
       "properties": {
         "type": {
           "title": "Type of interest",
-          "description": "A codelist value indicating the nature of the interest. See the [interestType codelist](#interesttype)",
+          "description": "A codelist value indicating the nature of the interest. See the interestType codelist",
           "type": "string",
           "enum": [
             "shareholding",
@@ -362,7 +362,7 @@
         },
         "motivation": {
           "title": "Motivation",
-          "description": "The motivation for this annotation, chosen from a codelist. See the [annotationMotivation](#annotationmotivation) codelist.",
+          "description": "The motivation for this annotation, chosen from a codelist. See the annotationMotivation codelist.",
           "type": "string",
           "enum": [
             "commenting",
