--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -12,3 +12,4 @@ six==1.11.0
 # See table at bottom of https://python-jsonschema.readthedocs.io/en/latest/validate/#validating-formats
 rfc3987==1.3.7
 strict-rfc3339==0.7
+-e git+https://github.com/OpenDataServices/compile-to-json-schema.git@v0.1.0#egg=compiletojsonschema
