tests: Run the flake8 test from the OCDS standard-maintenance-scripts
We have made our own copy of script.sh as
open-contracting_standard-maintenance-scripts_tests_script.sh in order
to comment lines out.

https://github.com/openownership/data-standard/issues/171

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
   - "pip install -r requirements_test.txt"
   - curl -s -S --retry 3 $BASEDIR/tests/install.sh | bash -
 script:
+  - "./open-contracting_standard-maintenance-scripts_tests_script.sh"
   - "py.test"
-  - "flake8 tests"
