--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -8,6 +8,9 @@ pycodestyle==2.3.1
 pyflakes==1.6.0
 pytest==3.4.2
 six==1.11.0
+json-merge-patch==0.2
+jscc==0.0.4
+
 # Libraries required for jsonschema format checking
 # See table at bottom of https://python-jsonschema.readthedocs.io/en/latest/validate/#validating-formats
 rfc3987==1.3.7
