codelists: Update schema enums to use camelCase

--- a/schema/components.json
+++ b/schema/components.json
@@ -233,19 +233,19 @@
           "type": "string",
           "enum": [
             "shareholding",
-            "voting-rights",
-            "appointment-of-board",
-            "other-influence-or-control",
-            "senior-managing-official",
-            "settlor-of-trust",
-            "trustee-of-trust",
-            "protector-of-trust",
-            "beneficiary-of-trust",
-            "other-influence-or-control-of-trust",
-            "rights-to-surplus-assets-on-dissolution",
-            "rights-to-profit-or-income",
-            "rights-granted-by-contract",
-            "conditional-rights-granted-by-contract"
+            "votingRights",
+            "appointmentOfBoard",
+            "otherInfluenceOrControl",
+            "seniorManagingOfficial",
+            "settlorOfTrust",
+            "trusteeOfTrust",
+            "protectorOfTrust",
+            "beneficiaryOfTrust",
+            "otherInfluenceOrControlOfTrust",
+            "rightsToSurplusAssetsOnDissolution",
+            "rightsToProfitOrIncome",
+            "rightsGrantedByContract",
+            "conditionalRightsGrantedByContract"
           ],
           "codelist": "interestType.csv",
           "openCodelist": false
