schema: Annotations to oneOf and add oneOfEnumSelectorField
https://github.com/openownership/lib-cove-bods/issues/64

This involves changes to build_schemas_for_testing that are required by
the change from anyOf to oneOf.
But actually, this code should have been required before but the compile
tool was not processing anyOf properly.
https://github.com/OpenDataServices/compile-to-json-schema/issues/28

https://github.com/openownership/data-standard/pull/376

--- a/schema/components.json
+++ b/schema/components.json
@@ -395,7 +395,8 @@
         "statementPointerTarget",
         "motivation"
       ],
-      "anyOf": [
+      "oneOfEnumSelectorField": "motivation",
+      "oneOf": [
         {
           "properties": {
             "motivation": {
