Changes to interestType codelist in response to issue #40

--- a/schema/components.json
+++ b/schema/components.json
@@ -237,11 +237,10 @@
             "appointmentOfBoard",
             "otherInfluenceOrControl",
             "seniorManagingOfficial",
-            "settlorOfTrust",
-            "trusteeOfTrust",
-            "protectorOfTrust",
-            "beneficiaryOfTrust",
-            "otherInfluenceOrControlOfTrust",
+            "settlor",
+            "trustee",
+            "protector",
+            "beneficiaryOfLegalArrangement",
             "rightsToSurplusAssetsOnDissolution",
             "rightsToProfitOrIncome",
             "rightsGrantedByContract",
