--- a/schema/components.json
+++ b/schema/components.json
@@ -250,7 +250,7 @@
           "openCodelist": false
         },
         "directOrIndirect": {
-          "title": "Interest level",
+          "title": "Direct or indirect",
           "description": "How directly the interest is exercised by the interested party. The value MUST be 'indirect' if intermediate entities or agents are known to exist, and MUST be 'direct' if such intermediaries are known not to exist. Otherwise the value MUST be 'unknown'.",
           "type": "string",
           "enum": [
