Implementing #406, SOE related control types

--- a/schema/components.json
+++ b/schema/components.json
@@ -244,7 +244,9 @@
             "rightsToSurplusAssetsOnDissolution",
             "rightsToProfitOrIncome",
             "rightsGrantedByContract",
-            "conditionalRightsGrantedByContract"
+            "conditionalRightsGrantedByContract",
+            "controlViaCompanyRulesOrArticles",
+            "controlByLegalFramework"
           ],
           "codelist": "interestType.csv",
           "openCodelist": false
