Implementing #313 Proposed new interestType: 'board-member'

--- a/schema/components.json
+++ b/schema/components.json
@@ -246,7 +246,9 @@
             "rightsGrantedByContract",
             "conditionalRightsGrantedByContract",
             "controlViaCompanyRulesOrArticles",
-            "controlByLegalFramework"
+            "controlByLegalFramework",
+            "boardMember",
+            "boardChair"
           ],
           "codelist": "interestType.csv",
           "openCodelist": false
