implementing #276 adding unknown and unpublished interest types

--- a/schema/components.json
+++ b/schema/components.json
@@ -248,7 +248,9 @@
             "controlViaCompanyRulesOrArticles",
             "controlByLegalFramework",
             "boardMember",
-            "boardChair"
+            "boardChair",
+            "unknownInterest",
+            "unpublishedInterest"
           ],
           "codelist": "interestType.csv",
           "openCodelist": false
