Implementing #344 enjoyment of assets and/or usufruct

--- a/schema/components.json
+++ b/schema/components.json
@@ -250,7 +250,9 @@
             "boardMember",
             "boardChair",
             "unknownInterest",
-            "unpublishedInterest"
+            "unpublishedInterest",
+            "enjoymentAndUseOfAssets",
+            "rightToProfitOrIncomeFromAssets"
           ],
           "codelist": "interestType.csv",
           "openCodelist": false
