--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -45,13 +45,15 @@ idna==2.10
     # via requests
 imagesize==1.2.0
     # via sphinx
+importlib-resources==5.12.0
+    # via jsonschema
 iniconfig==1.1.1
     # via pytest
 jinja2==2.11.3
     # via
     #   myst-parser
     #   sphinx
-jscc==0.0.5
+jscc==0.1.1
     # via -r requirements_test.in
 json-merge-patch==0.2
     # via
@@ -61,12 +63,12 @@ jsonpointer==2.1
     # via
     #   sphinxcontrib-opendataservices
     #   sphinxcontrib-opendataservices-jsonschema
-jsonref==0.2
+jsonref==1.1.0
     # via
     #   compiletojsonschema
     #   jscc
     #   sphinxcontrib-opendataservices-jsonschema
-jsonschema==3.2.0
+jsonschema==4.17.3
     # via
     #   -r requirements_test.in
     #   compiletojsonschema
@@ -97,6 +99,8 @@ pep517==0.10.0
     # via pip-tools
 pip-tools==6.5.1
     # via -r requirements_test.in
+pkgutil-resolve-name==1.3.10
+    # via jsonschema
 pluggy==0.13.1
     # via
     #   -r requirements_test.in
@@ -135,14 +139,16 @@ requests==2.25.1
     #   jscc
     #   sphinx
     #   transifex-client
+rfc3339-validator==0.1.4
+    # via jscc
+rfc3986-validator==0.1.1
+    # via jscc
 rfc3987==1.3.8
-    # via
-    #   -r requirements_test.in
-    #   jscc
+    # via -r requirements_test.in
 six==1.15.0
     # via
     #   -r requirements_test.in
-    #   jsonschema
+    #   rfc3339-validator
     #   transifex-client
 smmap==5.0.0
     # via gitdb
@@ -181,9 +187,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 strict-rfc3339==0.7
-    # via
-    #   -r requirements_test.in
-    #   jscc
+    # via -r requirements_test.in
 text-unidecode==1.3
     # via python-slugify
 toml==0.10.2
@@ -199,6 +203,8 @@ urllib3==1.26.4
     #   transifex-client
 wheel==0.37.1
     # via pip-tools
+zipp==3.15.0
+    # via importlib-resources
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
